[gd_scene load_steps=45 format=3 uid="uid://hbide85u4r0n"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_6voe0"]
[ext_resource type="PackedScene" uid="uid://saxb6w03fjuf" path="res://assets/common/blends/pltu/blue_robotics/blue_robotics.blend" id="2_8vusj"]
[ext_resource type="LightmapGIData" uid="uid://dmj8rv1ogsb6c" path="res://assets/vr/scenes/museums/pltu/control_room/vr_control_room.lmbake" id="2_f4355"]
[ext_resource type="Script" path="res://assets/vr/scenes/museums/pltu/control_room/vr_control_room.gd" id="2_ju2fr"]
[ext_resource type="Environment" uid="uid://cck8l47q3d1qg" path="res://assets/common/scenes/museums/hub/hub_environment.tres" id="2_re33m"]
[ext_resource type="PackedScene" uid="uid://bbgy8nkcgu7ne" path="res://assets/common/blends/pltu/control-room/control-room.blend" id="3_4kros"]
[ext_resource type="Texture2D" uid="uid://db164g2d1qjq7" path="res://assets/common/images/ui/IndonesiaPower.png" id="3_slpyt"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="4_sxrcc"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="5_o0ugp"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="6_4ywuw"]
[ext_resource type="Texture2D" uid="uid://xeeeg1e7u4su" path="res://assets/common/textures/white_marble/Marble025_1K-PNG_Color.png" id="6_h5qhw"]
[ext_resource type="PackedScene" uid="uid://d0sqwfg4uq220" path="res://assets/vr/scenes/museums/pltu/blue_robotics.tscn" id="6_mps7s"]
[ext_resource type="PackedScene" uid="uid://bl2nuu3qhlb5k" path="res://addons/godot-xr-tools/functions/movement_direct.tscn" id="6_ph1se"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="7_bu5cq"]
[ext_resource type="Texture2D" uid="uid://cv7ehqibfcvcu" path="res://assets/common/textures/white_marble/Marble025_1K-PNG_NormalGL.png" id="7_v63pv"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="8_dakx3"]
[ext_resource type="PackedScene" uid="uid://fiul51tsyoop" path="res://addons/godot-xr-tools/functions/function_teleport.tscn" id="9_ac3nr"]
[ext_resource type="Material" uid="uid://sjphyvdy5owj" path="res://assets/common/materials/floor_wood.tres" id="10_5txgu"]
[ext_resource type="Material" uid="uid://cygjg3otdpc16" path="res://assets/common/materials/white_plastic.tres" id="10_m66kn"]
[ext_resource type="Material" uid="uid://fptjo2nat0qy" path="res://assets/common/materials/gray_plastic.tres" id="12_pjw1y"]
[ext_resource type="Material" uid="uid://2i2basqttdcj" path="res://assets/common/materials/blue_plastic.tres" id="14_66lyb"]
[ext_resource type="PackedScene" uid="uid://cqhw276realc" path="res://addons/godot-xr-tools/functions/function_pointer.tscn" id="14_mgj8c"]
[ext_resource type="PackedScene" uid="uid://ce7vysyvondf8" path="res://addons/godot-xr-tools/objects/snap_zone.tscn" id="17_bouua"]
[ext_resource type="PackedScene" uid="uid://da2qgxxwwitl6" path="res://addons/godot-xr-tools/objects/highlight/highlight_ring.tscn" id="18_13u0w"]
[ext_resource type="Material" uid="uid://drhsx82m5kq8w" path="res://assets/common/materials/orange.tres" id="19_1k83q"]
[ext_resource type="Material" uid="uid://dkyouxavms27n" path="res://assets/common/materials/black_plastic.tres" id="22_dxn5p"]
[ext_resource type="Material" uid="uid://e74yht86vfl" path="res://assets/common/materials/dark_blue_plastic.tres" id="22_jj8eu"]
[ext_resource type="Material" uid="uid://8xsucm65o8px" path="res://assets/common/materials/black.tres" id="23_0iqxq"]
[ext_resource type="Texture2D" uid="uid://c8mh1fhgqpfe4" path="res://assets/common/textures/white_plastic/Plastic013A_1K-PNG_Color.png" id="23_iklsu"]
[ext_resource type="Texture2D" uid="uid://cchjqdrtn7wjp" path="res://assets/common/textures/white_plastic/Plastic013A_1K-PNG_NormalGL.png" id="24_k2j61"]
[ext_resource type="PackedScene" uid="uid://clujaf3u776a3" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.tscn" id="27_ukr3y"]
[ext_resource type="PackedScene" uid="uid://brl4cfhbw24ab" path="res://assets/vr/scenes/museums/pltu/sediment_minigame/sediment_minigame.tscn" id="28_q7ath"]
[ext_resource type="AudioStream" uid="uid://b7frphxixlweh" path="res://assets/common/sfx/mixkit-futuristic-robotic-fast-sweep-171.wav" id="30_f202v"]
[ext_resource type="AudioStream" uid="uid://0k4loxnd77d5" path="res://assets/common/music/y2mate.com - Free Music  Space Ambient Background Music For Videos  Universe.mp3" id="34_camt0"]
[ext_resource type="PackedScene" uid="uid://bk3uatdptflx3" path="res://assets/vr/scenes/level_transition/vr_level_transition.tscn" id="35_p5pq2"]
[ext_resource type="PackedScene" uid="uid://c5qbwoy356hs7" path="res://assets/vr/scenes/main_menu/level_select/vr_level_select_screen.tscn" id="36_7xy3w"]
[ext_resource type="PackedScene" uid="uid://dg7eoj7r5sv4a" path="res://assets/common/scenes/level_select/variations/hub_level_select.tscn" id="37_40hx3"]
[ext_resource type="PackedScene" uid="uid://r4txbqiswlc8" path="res://assets/common/scenes/level_select/variations/history_museum_level_select.tscn" id="37_xqmcb"]
[ext_resource type="PackedScene" uid="uid://c64pu0e3v1dhr" path="res://assets/common/scenes/level_select/variations/quit_level_select.tscn" id="38_2munu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1bdcn"]
albedo_color = Color(0, 0.329412, 1, 1)
albedo_texture = ExtResource("6_h5qhw")
normal_texture = ExtResource("7_v63pv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jd2yv"]
albedo_color = Color(0.941176, 0.952941, 0.984314, 1)
albedo_texture = ExtResource("6_h5qhw")
normal_texture = ExtResource("7_v63pv")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wppua"]
albedo_color = Color(0.988235, 0.752941, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ietsr"]
shading_mode = 0
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ca5v0"]
albedo_color = Color(0.337255, 0.14902, 0.235294, 1)
albedo_texture = ExtResource("23_iklsu")
normal_texture = ExtResource("24_k2j61")
uv1_triplanar = true

[node name="VRControlRoom" instance=ExtResource("1_6voe0")]
script = ExtResource("2_ju2fr")

[node name="Sprite3D" type="Sprite3D" parent="." index="0"]
transform = Transform3D(0.24, 0, 0, 0, 0.24, 0, 0, 0, 0.24, 1.66421, 2.62877, -1.91343)
texture = ExtResource("3_slpyt")

[node name="Label3D" type="Label3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.72828, 1.20452, -1.91748)
text = "PLTU Condensate Tank
Maintenance Room"
font_size = 72
outline_size = 30

[node name="SystemStatusLabel" type="Label3D" parent="." index="2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.90162, 1.8764, -0.322385)
text = "System is offline."
font_size = 48
outline_size = 30

[node name="Greetings" type="Label3D" parent="." index="3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3.782, 2.73973, 3.32109)
pixel_size = 0.001
text = "Dear worker,

Our condensate tank has been running for 3 months without maintance. As a result, the bottom of the tank is filled with sediments.

Use this ROV to suck up those sediments. Drop it on top of the tank accross the room and start the system to the right.

Thank you for your cooperation."
font_size = 80
outline_size = 39
horizontal_alignment = 0
vertical_alignment = 0
autowrap_mode = 2
width = 1500.0

[node name="Maintenance" parent="." index="4" instance=ExtResource("27_ukr3y")]
transform = Transform3D(2.34129e-07, 0, 1.78541, 0, 1.78541, 0, -1.78541, 0, 2.34129e-07, -3.87792, 1.67916, -0.265279)
visible = false
screen_size = Vector2(1.6, 0.9)
scene = ExtResource("28_q7ath")
viewport_size = Vector2(1920, 1080)
unshaded = true

[node name="LightmapGI" type="LightmapGI" parent="." index="5"]
light_data = ExtResource("2_f4355")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="6"]
environment = ExtResource("2_re33m")

[node name="XROrigin3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.323166, 0.200187, 3.55055)

[node name="FunctionPickup" parent="XROrigin3D/LeftHand" index="0" instance=ExtResource("4_sxrcc")]

[node name="LeftHand" parent="XROrigin3D/LeftHand" index="1" instance=ExtResource("5_o0ugp")]

[node name="MovementDirect" parent="XROrigin3D/LeftHand" index="2" instance=ExtResource("6_ph1se")]
strafe = true

[node name="FunctionTeleport" parent="XROrigin3D/LeftHand" index="3" instance=ExtResource("9_ac3nr")]

[node name="FunctionPickup" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("4_sxrcc")]

[node name="RightHand" parent="XROrigin3D/RightHand" index="1" instance=ExtResource("6_4ywuw")]

[node name="MovementTurn" parent="XROrigin3D/RightHand" index="2" instance=ExtResource("8_dakx3")]

[node name="FunctionPointer" parent="XROrigin3D/RightHand" index="3" instance=ExtResource("14_mgj8c")]
show_laser = 2
laser_length = 1

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("7_bu5cq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.323166, 0, 3.55055)

[node name="control-room" parent="." index="8" instance=ExtResource("3_4kros")]

[node name="Platform" parent="control-room" index="0"]
surface_material_override/0 = ExtResource("12_pjw1y")
surface_material_override/1 = ExtResource("10_m66kn")
surface_material_override/2 = ExtResource("14_66lyb")
surface_material_override/3 = ExtResource("10_m66kn")
surface_material_override/4 = ExtResource("10_m66kn")

[node name="BlueRobotics" parent="control-room/Platform/ObjectCenter" index="0" instance=ExtResource("6_mps7s")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Room" parent="control-room" index="1"]
surface_material_override/0 = SubResource("StandardMaterial3D_1bdcn")
surface_material_override/1 = ExtResource("10_5txgu")
surface_material_override/2 = ExtResource("10_m66kn")
surface_material_override/3 = SubResource("StandardMaterial3D_jd2yv")

[node name="Cylinder_003" parent="control-room" index="2"]
surface_material_override/0 = ExtResource("19_1k83q")
surface_material_override/1 = SubResource("StandardMaterial3D_wppua")

[node name="RobotSnapZone" parent="control-room/RobotSnap" index="0" instance=ExtResource("17_bouua")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0.594182, 0)
snap_mode = 1
snap_require = "BlueRobotics"

[node name="HighlightRing" parent="control-room/RobotSnap/RobotSnapZone" index="2" instance=ExtResource("18_13u0w")]

[node name="Black" parent="control-room/RobotSnap/RobotSnapZone" index="3" instance=ExtResource("2_8vusj")]

[node name="ChassisBottom" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableTube" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cable_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cable_002" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="1"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cable_003" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="2"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cable" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="3"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cable_004" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="4"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cable_005" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="5"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="6"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_004" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="7"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_006" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="8"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_008" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="9"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_009" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="10"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_010" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="11"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/CableTube" index="12"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="ChassisSides" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom" index="1"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="BuoyPlatform" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Buoy" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/BuoyPlatform" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_002" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/BuoyPlatform" index="1"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_003" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/BuoyPlatform" index="2"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_005" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/BuoyPlatform" index="3"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CableSocket_007" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/BuoyPlatform" index="4"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="ChassisFloat" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides" index="1"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="FanGuard" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/ChassisFloat" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="FanCenter" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/ChassisFloat/FanGuard" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Fan" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/ChassisFloat/FanGuard/FanCenter" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="LightHolder_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides" index="2"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Light" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/ChassisSides/LightHolder_001" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Cylinder" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom" index="2"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="CylinderHolder" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/Cylinder" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="FanGuard_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/Cylinder" index="1"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="FanCenter_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/Cylinder/FanGuard_001" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Fan_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/Cylinder/FanGuard_001/FanCenter_001" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="LightHolder" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom" index="3"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Light_001" parent="control-room/RobotSnap/RobotSnapZone/Black/BlueRobotics/ChassisBottom/LightHolder" index="0"]
material_override = SubResource("StandardMaterial3D_ietsr")

[node name="Plane_003" parent="control-room" index="4"]
surface_material_override/0 = ExtResource("23_0iqxq")

[node name="Desk_001" parent="control-room" index="5"]
surface_material_override/0 = ExtResource("10_5txgu")

[node name="Desk" parent="control-room/Desk_001" index="0"]
surface_material_override/0 = ExtResource("22_dxn5p")

[node name="Plane_007" parent="control-room" index="6"]
surface_material_override/0 = ExtResource("22_dxn5p")

[node name="Plane_008" parent="control-room" index="7"]
surface_material_override/0 = ExtResource("23_0iqxq")

[node name="OnlineSFX" type="AudioStreamPlayer3D" parent="control-room/Plane_008" index="0"]
stream = ExtResource("30_f202v")
volume_db = -10.0

[node name="Cube" parent="control-room" index="8"]
surface_material_override/0 = SubResource("StandardMaterial3D_ca5v0")

[node name="Plane_009" parent="control-room" index="9"]
material_override = ExtResource("22_jj8eu")

[node name="Plane_010" parent="control-room" index="10"]
material_override = ExtResource("22_jj8eu")

[node name="Plane_011" parent="control-room" index="11"]
material_override = ExtResource("22_jj8eu")

[node name="Plane_012" parent="control-room" index="12"]
material_override = ExtResource("22_jj8eu")

[node name="OmniLight3D" type="OmniLight3D" parent="." index="9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.485378, 1.21896, 0.807002)
visible = false
light_bake_mode = 1
shadow_enabled = true
omni_range = 16.98

[node name="OmniLight3D2" type="OmniLight3D" parent="." index="10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45566, 1.21896, -0.4776)
visible = false
light_bake_mode = 1
shadow_enabled = true
omni_range = 16.98

[node name="OmniLight3D3" type="OmniLight3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.8273, 2.34379, -0.4776)
visible = false
light_energy = 0.7
light_bake_mode = 1
shadow_enabled = true
omni_range = 16.98

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="12"]
stream = ExtResource("34_camt0")
volume_db = -20.0
autoplay = true

[node name="VRLevelTransition" parent="." index="13" instance=ExtResource("35_p5pq2")]

[node name="HistoryLevelSelect" parent="." index="14" instance=ExtResource("36_7xy3w")]
transform = Transform3D(-0.749202, 0, -0.676838, 0, 1.00966, 0, 0.676838, 0, -0.749202, 3.32184, 1.67053, 1.95659)
screen_size = Vector2(2.276, 1.5)
scene = ExtResource("37_40hx3")

[node name="HistoryLevelSelect2" parent="." index="15" instance=ExtResource("36_7xy3w")]
transform = Transform3D(1.00966, 0, 0, 0, 1.00966, 0, 0, 0, 1.00966, 8.50775, 1.57, -1.91746)
screen_size = Vector2(2.276, 1.5)
scene = ExtResource("38_2munu")

[node name="HistoryLevelSelect3" parent="." index="16" instance=ExtResource("36_7xy3w")]
transform = Transform3D(-1.00966, 0, 8.82673e-08, 0, 1.00966, 0, -8.82673e-08, 0, -1.00966, 8.50775, 1.57, 1.18656)
screen_size = Vector2(2.276, 1.5)
scene = ExtResource("37_xqmcb")

[connection signal="has_dropped" from="control-room/RobotSnap/RobotSnapZone" to="." method="_on_robot_snap_zone_has_dropped"]
[connection signal="has_picked_up" from="control-room/RobotSnap/RobotSnapZone" to="." method="_on_robot_snap_zone_has_picked_up"]

[editable path="control-room"]
[editable path="control-room/RobotSnap/RobotSnapZone/Black"]
